- attempts to fix the colour profile issue - changed fixed background attachment on cover images to static on smaller screens

--- a/_assets/stylesheets/brewhouse.css.scss
+++ b/_assets/stylesheets/brewhouse.css.scss
@@ -563,7 +563,7 @@ img.img-centered {
 }
 
 .cover {
-  background-attachment: fixed;
+  background-attachment: static;
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -614,6 +614,7 @@ img.img-centered {
     display: block;
   }
   @media (min-width: 768px) {
+    background-attachment: fixed;
     padding: 8em 0;
     .bh-product {
       top: -11.75em;
